--- a/JS30/Day1- JavaScript Drum Kit/style.css
+++ b/JS30/Day1- JavaScript Drum Kit/style.css
@@ -1,20 +1,26 @@
-html {
-  font-size: 10px;
-  background: url("./background.jpg") bottom center;
-  background-size: cover; }
+* {
+  box-sizing: border-box; }
 
 body, html {
   margin: 0;
   padding: 0;
   font-family: sans-serif; }
 
+html {
+  font-size: 10px;
+  background: url("./background.jpg") bottom center;
+  background-size: cover; }
+
 .keys {
   display: flex;
-  flex: 1;
+  flex-wrap: wrap;
   min-height: 100vh;
   align-items: center;
   justify-content: center; }
   .keys .key {
+    display: block;
+    flex: 9%;
+    max-width: 11.11%;
     border: .4rem solid black;
     border-radius: .5rem;
     margin: 1rem;
@@ -38,3 +44,12 @@ body, html {
     transform: scale(1.1);
     border-color: #ffc600;
     box-shadow: 0 0 1rem #ffc600; }
+
+@media screen and (max-width: 400px) {
+  .keys .key {
+    flex: 30%;
+    max-width: 30%; } }
+@media screen and (max-width: 800px) {
+  .keys .key {
+    flex: 20%;
+    max-width: 20%; } }
