--- a/JS30/Day1- JavaScript Drum Kit/style.scss
+++ b/JS30/Day1- JavaScript Drum Kit/style.scss
@@ -35,9 +35,6 @@ html {
 		color: white;
 		background: rgba(0,0,0,0.4);
 		text-shadow: 0 0 .5rem black;
-		a{
-			text-decoration: none;
-		}
 		kbd {
 			display: block;
 			font-size: 4rem;
@@ -49,6 +46,12 @@ html {
 			letter-spacing: .1rem;
 			color: #ffc600;
 		}
+	}
+	
+	.key:active{
+		transform: scale(1.1);
+		border-color: #ffc600;
+		box-shadow: 0 0 1rem #ffc600;
 	}
 	.playing {
 			transform: scale(1.1);
