--- a/JS30/Day1- JavaScript Drum Kit/style.css
+++ b/JS30/Day1- JavaScript Drum Kit/style.css
@@ -32,8 +32,6 @@ html {
     color: white;
     background: rgba(0, 0, 0, 0.4);
     text-shadow: 0 0 .5rem black; }
-    .keys .key a {
-      text-decoration: none; }
     .keys .key kbd {
       display: block;
       font-size: 4rem;
@@ -43,6 +41,10 @@ html {
       text-transform: uppercase;
       letter-spacing: .1rem;
       color: #ffc600; }
+  .keys .key:active {
+    transform: scale(1.1);
+    border-color: #ffc600;
+    box-shadow: 0 0 1rem #ffc600; }
   .keys .playing {
     transform: scale(1.1);
     border-color: #ffc600;
