--- a/JS30/Day1- JavaScript Drum Kit/style.scss
+++ b/JS30/Day1- JavaScript Drum Kit/style.scss
@@ -60,6 +60,12 @@ html {
 	}
 }
 @media screen and (max-width: 400px) {
+	body{
+		max-height: 90vh;
+	}
+	.keys{
+		min-height: 90vh;
+	}
   .keys .key {
     flex: 30%;
 	  max-width: 30%;
